add JOBNAMEBASE to default config
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@19193 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/hdswif/input.config
+++ b/hdswif/input.config
@@ -9,14 +9,14 @@ PROJECT                       gluex
 TRACK                         reconstruction
 OS                            centos65
 
-NCORES                        2
+NCORES                        6
 DISK                          40
 RAM                           5
 TIMELIMIT                     8
 
-JOBNAMEBASE                   myjobs
+JOBNAMEBASE                   
 RUNPERIOD                     2015-03
-VERSION                       99
+VERSION                       11
 OUTPUT_TOPDIR                 /volatile/halld/test/RunPeriod-[RUNPERIOD]/ver[VERSION] # Example of other variables included in variable.
-SCRIPTFILE                    /home/gxproj5/halld/hdswif/user_script.sh               # Must specify full path
+SCRIPTFILE                    /home/gxproj5/halld/hdswif/script.sh                    # Must specify full path
 ENVFILE                       /home/gxproj5/halld/hdswif/setup_jlab-2015-03.csh       # Must specify full path
