--- a/hdswif/input.config
+++ b/hdswif/input.config
@@ -14,7 +14,7 @@ DISK                          40
 RAM                           5
 TIMELIMIT                     8
 
-JOBNAMEBASE                   
+JOBNAMEBASE                   offmon_
 RUNPERIOD                     2015-03
 VERSION                       11
 OUTPUT_TOPDIR                 /volatile/halld/test/RunPeriod-[RUNPERIOD]/ver[VERSION] # Example of other variables included in variable.
