--- a/hdswif/input.config
+++ b/hdswif/input.config
@@ -16,7 +16,7 @@ TIMELIMIT                     8
 
 JOBNAMEBASE                   offmon_
 RUNPERIOD                     2015-03
-VERSION                       11
-OUTPUT_TOPDIR                 /volatile/halld/test/RunPeriod-[RUNPERIOD]/ver[VERSION] # Example of other variables included in variable.
-SCRIPTFILE                    /home/gxproj5/halld/hdswif/script.sh                    # Must specify full path
-ENVFILE                       /home/gxproj5/halld/hdswif/setup_jlab-2015-03.csh       # Must specify full path
+VERSION                       12
+OUTPUT_TOPDIR                 /volatile/halld/offline_monitoring/RunPeriod-[RUNPERIOD]/ver[VERSION] # Example of other variables included in variable
+SCRIPTFILE                    /home/gxproj5/halld/hdswif/script.sh                                  # Must specify full path
+ENVFILE                       /home/gxproj5/halld/hdswif/setup_jlab-2015-03.csh                     # Must specify full path
