--- a/hdswif/input.config
+++ b/hdswif/input.config
@@ -20,3 +20,5 @@ VERSION                       23
 OUTPUT_TOPDIR                 /volatile/halld/offline_monitoring/RunPeriod-[RUNPERIOD]/ver[VERSION] # Example of other variables included in variable
 SCRIPTFILE                    /home/gxproj5/monitoring/hdswif/script.sh                                  # Must specify full path
 ENVFILE                       /home/gxproj5/env_monitoring_launch                                   # Must specify full path
+
+PLUGINS                       TAGH_online,TAGM_online,BCAL_online,CDC_online,CDC_expert,FCAL_online,FDC_online,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,monitoring_hists,danarest,BCAL_Eff,p2pi_hists,p3pi_hists,HLDetectorTiming,BCAL_inv_mass,trackeff_missing,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,BCAL_TDC_Timing
