--- a/incoming/input.config
+++ b/incoming/input.config
@@ -9,10 +9,10 @@ PROJECT                       gluex
 TRACK                         reconstruction
 OS                            centos65
 
-NCORES                        24        # 24 = Entire node
+NCORES                        10
 DISK                          40
-RAM                           32        # 32 GB per node
-TIMELIMIT                      8
+RAM                           11
+TIMELIMIT                     12
 
 JOBNAMEBASE                   offmon
 RUNPERIOD                     2016-02
@@ -21,5 +21,5 @@ OUTPUT_TOPDIR                 /cache/halld/offline_monitoring/RunPeriod-[RUNPERI
 SCRIPTFILE                    /home/gxproj1/monitoring/incoming/script.sh                        # Must specify full path
 ENVFILE                       /home/gxproj1/env_monitoring_incoming                              # Must specify full path
 
-PLUGINS                       TAGH_online,TAGM_online,BCAL_online,CDC_online,FCAL_online,FDC_online,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,monitoring_hists,danarest,BCAL_Eff,p2pi_hists,p3pi_hists,HLDetectorTiming,BCAL_inv_mass,trackeff_missing,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,BCAL_TDC_Timing,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LEDonline,pedestal_online
+PLUGINS                       TAGH_online,TAGM_online,BCAL_online,CDC_online,FCAL_online,FDC_online,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,monitoring_hists,danarest,BCAL_Eff,p2pi_hists,p3pi_hists,HLDetectorTiming,BCAL_inv_mass,trackeff_missing,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,BCAL_TDC_Timing,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LEDonline,pedestal_online,EPICS_dump
 
