Updates: Separate field for NTHREADS, copy idxa files.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@20710 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/hdswif/input.config
+++ b/hdswif/input.config
@@ -9,16 +9,17 @@ PROJECT                       gluex
 TRACK                         reconstruction
 OS                            centos65
 
-NCORES                        24
-DISK                          40
-RAM                           24
-TIMELIMIT                     8
+NCORES                        12
+DISK                          30
+RAM                           15
+TIMELIMIT                     12
+NTHREADS                      12
 
 JOBNAMEBASE                   offmon
 RUNPERIOD                     2016-02
-VERSION                       02
+VERSION                       04
 OUTPUT_TOPDIR                 /cache/halld/offline_monitoring/RunPeriod-[RUNPERIOD]/ver[VERSION] # Example of other variables included in variable
 SCRIPTFILE                    /home/gxproj5/monitoring/hdswif/script.sh                                  # Must specify full path
 ENVFILE                       /home/gxproj5/env_monitoring_launch                                   # Must specify full path
 
-PLUGINS                       TAGH_online,TAGM_online,BCAL_online,CDC_online,FCAL_online,FDC_online,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,monitoring_hists,danarest,BCAL_Eff,p2pi_hists,p3pi_hists,HLDetectorTiming,BCAL_inv_mass,trackeff_missing,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,BCAL_TDC_Timing,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LEDonline,pedestal_online
+PLUGINS                       janadot,online_occupancy,danarest,monitoring_hists,track_skimmer,TAGH_online,TAGM_online,BCAL_online,CDC_online,FCAL_online,FDC_online,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,HLDetectorTiming,BCAL_inv_mass,trackeff_missing,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,BCAL_TDC_Timing,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LEDonline,pedestal_online
