Minor fixes. Surely, the first batch of many.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@20838 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jana_recon.config
+++ b/launch/jana_recon.config
@@ -3,6 +3,6 @@ PLUGINS janadot,danarest,monitoring_hists,track_skimmer,occupancy_online,EPICS_d
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS 24
 
-REST:DATAVERSIONSTRING=recon_RunPeriod-2016-02_ver01
+REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver01
 JANA_CALIB_CONTEXT "variation=default,calibtime=2016-06-06"     #calibtime=year-month-day
 
