--- a/launch/jana_offmon.config
+++ b/launch/jana_offmon.config
@@ -3,6 +3,6 @@ PLUGINS janadot,occupancy_online,danarest,monitoring_hists,track_skimmer,TAGH_on
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS 24
 
-REST:DATAVERSIONSTRING=offmon_RunPeriod-2016-02_ver05
+REST:DATAVERSIONSTRING offmon_RunPeriod-2016-02_ver05
 JANA_CALIB_CONTEXT "variation=default,calibtime=2016-06-06"     #calibtime=year-month-day
 
