--- a/launch/jana_recon.config
+++ b/launch/jana_recon.config
@@ -4,5 +4,5 @@ PLUGINS janadot,danarest,monitoring_hists,track_skimmer,occupancy_online,EPICS_d
 NTHREADS 24
 
 REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver01
-JANA_CALIB_CONTEXT "variation=default,calibtime=2016-06-06"     #calibtime=year-month-day
+JANA_CALIB_CONTEXT "variation=default,calibtime=2016-06-06-12-00-00"     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
