--- a/launch/jobs_recon.config
+++ b/launch/jobs_recon.config
@@ -24,7 +24,7 @@ BATCH                         01
 WORKFLOW                      recon_[RUNPERIOD]_ver[VERSION]_batch[BATCH]
 
 # JOB, SCRIPT CONTROL
-ENVFILE                       /home/gxproj5/env_monitoring_launch
+ENVFILE                       /home/gxproj5/env_monitoring_launch.sh
 SCRIPTFILE                    /home/gxproj5/monitoring/launch/script.sh
 RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
 JANA_CONFIG                   /home/gxproj5/monitoring/launch/jana_recon.config
