--- a/launch/jana_test.config
+++ b/launch/jana_test.config
@@ -4,6 +4,6 @@ PLUGINS janadot,danarest,monitoring_hists,track_skimmer,occupancy_online,EPICS_d
 NTHREADS 24
 
 REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver01
-JANA_CALIB_CONTEXT "variation=default,calibtime=2016-06-06-08-00-00"     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+JANA_CALIB_CONTEXT "variatione=default calibtime=2016-06-06-08-00-00"     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 EVENTS_TO_KEEP 100000
