Update: include e+/- reconstruction
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@20864 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jana_test.config
+++ b/launch/jana_test.config
@@ -4,6 +4,8 @@ PLUGINS janadot,danarest,monitoring_hists,track_skimmer,occupancy_online,EPICS_d
 NTHREADS 24
 
 REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver01
-JANA_CALIB_CONTEXT "variatione=default calibtime=2016-06-06-08-00-00"     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+JANA_CALIB_CONTEXT "variatione=default calibtime=2016-06-06-12-00-00"     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
-EVENTS_TO_KEEP 100000
+TRKFIT:HYPOTHESES 2,3,8,9,11,12,14    #GEANT PIDs for tracking: Add e+/-
+
+EVENTS_TO_KEEP 10000
