--- a/launch/jana_recon.config
+++ b/launch/jana_recon.config
@@ -6,3 +6,5 @@ NTHREADS 14
 REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver01
 JANA_CALIB_CONTEXT "variation=default calibtime=2016-06-06-12-00-00"     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
+TRKFIT:HYPOTHESES 2,3,8,9,11,12,14    #GEANT PIDs for tracking: Add e+/-
+
