--- a/launch/jana_offmon.config
+++ b/launch/jana_offmon.config
@@ -4,5 +4,5 @@ PLUGINS janadot,occupancy_online,danarest,monitoring_hists,track_skimmer,TAGH_on
 NTHREADS 24
 
 REST:DATAVERSIONSTRING offmon_RunPeriod-2016-02_ver05
-JANA_CALIB_CONTEXT "variation=default calibtime=2016-06-06-12-00-00"     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+JANA_CALIB_CONTEXT variation=default calibtime=2016-06-06-12-00-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
