--- a/launch/jana_recon.config
+++ b/launch/jana_recon.config
@@ -4,7 +4,7 @@ PLUGINS janadot,danarest,monitoring_hists,track_skimmer,occupancy_online,EPICS_d
 NTHREADS 14
 
 REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver01
-JANA_CALIB_CONTEXT "variation=default calibtime=2016-06-06-17-30-00"     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+JANA_CALIB_CONTEXT variation=default calibtime=2016-06-06-17-30-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14    #GEANT PIDs for tracking: Add e+/-
 
