Tweaks: Change to bash.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@21389 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/incoming/jobs_incoming.config
+++ b/incoming/jobs_incoming.config
@@ -26,7 +26,7 @@ WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION]_batch[BATCH]
 # JOB, SCRIPT CONTROL
 ENVFILE                       /home/gxproj1/env_monitoring_launch.sh
 SCRIPTFILE                    /home/gxproj1/monitoring/launch/script.sh
-RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
+#RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
 JANA_CONFIG                   /home/gxproj1/monitoring/incoming/jana_incoming.config
 CACHE_PIN_DAYS                20                                            # max is 60, 0 or comment-out for none
 
