--- a/incoming/jana_incoming.config
+++ b/incoming/jana_incoming.config
@@ -4,6 +4,6 @@ PLUGINS janadot,occupancy_online,danarest,monitoring_hists,track_skimmer,TAGH_on
 NTHREADS 24
 
 REST:DATAVERSIONSTRING offmon_RunPeriod-2016-10_ver01
-JANA_CALIB_CONTEXT variation=default #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+JANA_CALIB_CONTEXT variation=default
 
 
