--- a/incoming/jobs_incoming.config
+++ b/incoming/jobs_incoming.config
@@ -20,8 +20,8 @@ TIMELIMIT                     8hrs
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
 RUNPERIOD                     2016-10
 VERSION                       01
-BATCH                         01
-WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION]_batch[BATCH]
+#BATCH                         01
+WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION]
 
 # JOB, SCRIPT CONTROL
 ENVFILE                       /home/gxproj1/env_monitoring_launch.sh
