--- a/incoming/jobs_incoming.config
+++ b/incoming/jobs_incoming.config
@@ -18,10 +18,10 @@ TIMELIMIT                     8hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
-RUNPERIOD                     2016-10
+RUNPERIOD                     2016-10 #KEEP THIS EXACT FORMAT
 VERSION                       01
 #BATCH                         01
-WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION]
+WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION] #KEEP THIS EXACT FORMAT
 
 # JOB, SCRIPT CONTROL
 ENVFILE                       /home/gxproj1/env_monitoring_launch.sh
