Major updates, not quite ready yet.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@21406 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/recon_test/jobs_recon_test.config
+++ b/recon_test/jobs_recon_test.config
@@ -23,15 +23,15 @@ DATE                          YYYY-MM-DD
 WORKFLOW                      recon_tests_[RUNPERIOD] #KEEP THIS EXACT FORMAT
 
 # JOB, SCRIPT CONTROL
-ENVFILE                       /u/scratch/gluex/recon_test/env_recon_test.sh
+ENVFILE                       /group/halld/Software/scripts/monitoring/recon_test/env_recon_test.sh
 SCRIPTFILE                    /group/halld/Software/scripts/monitoring/recon_test/script.sh
 JANA_CONFIG                   /group/halld/Software/scripts/monitoring/recon_test/jana_recon_test.config
-CACHE_PIN_DAYS                21                                            # max is 60, 0 or comment-out for none
+CACHE_PIN_DAYS                21                                                                           # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
 INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/rawdata/
 
 # FOR SMALL, MONITORING LAUNCHES
-OUTDIR_LARGE      /cache/halld/software_tests/RunPeriod-[RUNPERIOD]/recon_test/[DATE]/   # All
-OUTDIR_SMALL      /work/halld/data_monitoring/RunPeriod-2016-02/recontest/[DATE]/        # pngs, ROOT file
+OUTDIR_LARGE      /cache/halld/software_tests/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/   # All
+OUTDIR_SMALL      /work/halld/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/   # pngs, ROOT file
 
