--- a/recon_test/jobs_recon_test.config
+++ b/recon_test/jobs_recon_test.config
@@ -18,9 +18,9 @@ TIMELIMIT                     8hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, DATE: Not needed by launch.py: Only used to replace variables in this config
-RUNPERIOD                     YYYY-MM #KEEP THIS EXACT FORMAT
-DATE                          YYYY-MM-DD
-WORKFLOW                      recon_tests_[RUNPERIOD] #KEEP THIS EXACT FORMAT
+RUNPERIOD                     YYYY-MM                  # KEEP THIS EXACT FORMAT
+DATE                          YYYY-MM-DD               # KEEP THIS EXACT FORMAT
+WORKFLOW                      recon_tests_[RUNPERIOD]  # KEEP THIS EXACT FORMAT
 
 # JOB, SCRIPT CONTROL
 ENVFILE                       /group/halld/Software/scripts/monitoring/recon_test/env_recon_test.sh
@@ -31,7 +31,10 @@ CACHE_PIN_DAYS                21                                                
 # FILE INPUT, OUTPUT BASE DIRECTORIES
 INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/rawdata/
 
-# FOR SMALL, MONITORING LAUNCHES
-OUTDIR_LARGE      /cache/halld/software_tests/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/   # All
-OUTDIR_SMALL      /work/halld/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/   # pngs, ROOT file
+# FILE OUTPUT
+OUTDIR_LARGE      /cache/halld/software_tests/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/     # REST, hist
+OUTDIR_SMALL      /work/halld/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/     # log
+
+WEBDIR_LARGE      /work/halld/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/     # hist
+WEBDIR_SMALL      /work/halld2/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/    # pngs
 
