Fixes, plus add webpage.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@21417 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/recon_test/jobs_recon_test.config
+++ b/recon_test/jobs_recon_test.config
@@ -33,8 +33,8 @@ INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/rawdata/
 
 # FILE OUTPUT
 OUTDIR_LARGE      /cache/halld/software_tests/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/     # REST, hist
-OUTDIR_SMALL      /work/halld/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/     # log
+OUTDIR_SMALL      /work/halld2/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/    # log
 
 WEBDIR_LARGE      /work/halld/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/     # hist
-WEBDIR_SMALL      /work/halld2/data_monitoring/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/    # pngs
+WEBDIR_SMALL      /group/halld/www/halldweb/html/recon_tests/[DATE]/RunPeriod-[RUNPERIOD]/  # pngs
 
