Re-work the scripts so that emails are no longer sent from within the job (which didn't work). Instead, the cron script submits the jobs, then sleeps, and checks for workflow completion every 15 minutes. When all jobs have succeeded, it sends an email.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@21441 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/recon_test/jobs_recon_test.config
+++ b/recon_test/jobs_recon_test.config
@@ -18,9 +18,9 @@ TIMELIMIT                     8hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, DATE: Not needed by launch.py: Only used to replace variables in this config
-RUNPERIOD                     YYYY-MM                  # KEEP THIS EXACT FORMAT
-DATE                          YYYY-MM-DD               # KEEP THIS EXACT FORMAT
-WORKFLOW                      recon_tests_[RUNPERIOD]  # KEEP THIS EXACT FORMAT
+RUNPERIOD                     YYYY-MM             # KEEP THIS EXACT FORMAT
+DATE                          YYYY-MM-DD          # KEEP THIS EXACT FORMAT
+WORKFLOW                      recon_tests         # KEEP THIS EXACT FORMAT
 
 # JOB, SCRIPT CONTROL
 ENVFILE                       /group/halld/Software/scripts/monitoring/recon_test/env_recon_test.sh
