Check /mss/ rather than /cache/ for the files.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@22084 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/recon_test/jobs_recon_test.config
+++ b/recon_test/jobs_recon_test.config
@@ -29,7 +29,7 @@ JANA_CONFIG                   /group/halld/Software/scripts/monitoring/recon_tes
 CACHE_PIN_DAYS                21                                                                           # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/rawdata/
+INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/rawdata/
 
 # FILE OUTPUT
 OUTDIR_LARGE      /cache/halld/software_tests/RunPeriod-[RUNPERIOD]/recon_tests/[DATE]/     # REST, hist
