Remove IDXA dir.  Either IDXA files should be small, or should be put in large dir.
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@22105 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jobs_test.config
+++ b/launch/jobs_test.config
@@ -13,8 +13,8 @@ OS                            centos65
 # JOB RESOURCES
 NCORES                        14
 DISK                          30GB
-RAM                           10GB
-TIMELIMIT                     2hrs
+RAM                           12GB
+TIMELIMIT                     12hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
@@ -31,7 +31,7 @@ JANA_CONFIG                   /home/gxproj5/monitoring/launch/jana_test.config
 CACHE_PIN_DAYS                60                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/rawdata/
+INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/rawdata/
 
 # FOR FULL RECON LAUNCHES
 OUTDIR_LARGE      /cache/halld/RunPeriod-[RUNPERIOD]/recon/ver[VERSION]                  # REST, skims, hists, trees
