--- a/launch/jana_recon.config
+++ b/launch/jana_recon.config
@@ -1,10 +1,10 @@
-PLUGINS janadot,danarest,monitoring_hists,track_skimmer,occupancy_online,EPICS_dump,TS_scaler,TRIG_online,L1_online,PSPair_online,BCAL_inv_mass,FCAL_invmass,BCAL_Hadronic_Eff,CDC_Efficiency,FCAL_Hadronic_Eff,FDC_Efficiency,SC_Eff,TOF_calib,TOF_Eff,trackeff_missing,evio_writer,trigger_skims,bigevents_skim,p2pi_hists,p3pi_hists,p4pi_hists,p2k_hists
+PLUGINS danarest,monitoring_hists,track_skimmer,occupancy_online,EPICS_dump,TS_scaler,TRIG_online,L1_online,PSPair_online,BCAL_inv_mass,FCAL_invmass,BCAL_Hadronic_Eff,CDC_Efficiency,FCAL_Hadronic_Eff,FDC_Efficiency,SC_Eff,TOF_Eff,trackeff_missing,evio_writer,p2pi_hists,p3pi_hists,TrackingPulls
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
-NTHREADS 14
+NTHREADS 12
 
-REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver02
-JANA_CALIB_CONTEXT variation=default calibtime=2016-09-02-14-42-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver03
+JANA_CALIB_CONTEXT variation=default calibtime=2016-11-04-14-57-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
-TRKFIT:HYPOTHESES 2,3,8,9,11,12,14    #GEANT PIDs for tracking: Add e+/-
+TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
