moved default config files to centos7
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@22169 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jana_analysis.config
+++ b/launch/jana_analysis.config
@@ -1,69 +1,74 @@
-PLUGINS monitoring_hists,ReactionFilter,trackeff_missing,2kpi0xi,antineutron,Bb2pi,Bpi0g,BTbcal_eta,cascade,cascade0,etaeta_nas,eta_etapr_eeg,etaetaprm_nas,EtaPrm_MKamel,incl_jpsi_lp,jpsi_lp,jpsi_robison,k0pi0sigmaplus,k0pisigma0,k0sigma,k2pisigma0,kpi0sigma0,kpisigmaplus,kpk0pixi,ksigma0,LambdaC,n3pi_hists,neutron,Nfinal,npiPlus_singlePi,p2gamma_hists,p4gamma,PhiEta,phi_salgado,pomega2pi,pomegapi,ppbar_phelps,sdobbs_ccbar,sdobbs_pi0_dalitz,Xomega
+PLUGINS monitoring_hists,ReactionFilter,2kpi0xi,antineutron,Bb2pi,Bpi0g,BTbcal_eta,cascade,cascade0,etaeta_nas,eta_etapr_eeg,etaetaprm_nas,EtaPrm_MKamel,incl_jpsi_lp,jpsi_lp,jpsi_robison,k0pi0sigmaplus,k0pisigma0,k0sigma,k2pisigma0,kpi0sigma0,kpisigmaplus,kpk0pixi,ksigma0,LambdaC,n3pi_hists,neutron,Nfinal,npiPlus_singlePi,p2gamma_hists,p4gamma,PhiEta,phiomega,phi_salgado,pomega2pi,pomegapi,ppbar_phelps,sdobbs_ccbar,sdobbs_pi0_dalitz,Xomega
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
-NTHREADS 12
+NTHREADS 6
+
+#Limit number of neurals
+COMBO:MAX_NEUTRALS 14
 
 REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver03
-JANA_CALIB_CONTEXT variation=default calibtime=2016-11-22-09-00-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+JANA_CALIB_CONTEXT variation=default calibtime=2016-11-28-18-47-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
-ReactionFilter:FS1  EXC_100_2
-ReactionFilter:FS2  EXC_100_110
-ReactionFilter:FS3  EXC_100_111
-ReactionFilter:FS4  EXC_100_112
-ReactionFilter:FS5  EXC_100_220
-ReactionFilter:FS6  EXC_100_221
-ReactionFilter:FS7  EXC_100_222
-ReactionFilter:FS8  EXC_100_330
-ReactionFilter:FS9  EXC_100_2000
-ReactionFilter:FS10  EXC_100_2001
-ReactionFilter:FS11  EXC_100_2002
-ReactionFilter:FS12  EXC_100_2110
-ReactionFilter:FS13  EXC_100_11100
-ReactionFilter:FS14  EXC_100_11101
-ReactionFilter:FS15  EXC_100_11102
-ReactionFilter:FS16  EXC_100_11210
-ReactionFilter:FS17  EXC_100_101010
-ReactionFilter:FS18  EXC_100_101011
-ReactionFilter:FS19  EXC_100_101012
-ReactionFilter:FS20  EXC_100_101120
-ReactionFilter:FS21  EXC_100_110000
-ReactionFilter:FS22  EXC_100_110001
-ReactionFilter:FS23  EXC_100_110002
-ReactionFilter:FS24  EXC_100_110110
-ReactionFilter:FS25  EXC_100_110111
-ReactionFilter:FS26  EXC_100_110112
-ReactionFilter:FS27  EXC_100_110220
+#EVENTS_TO_KEEP 50000
+
+ReactionFilter:FS1  EXC_100_2			# 2pi0
+ReactionFilter:FS2  EXC_100_110			# pi+, pi-
+ReactionFilter:FS3  EXC_100_111			# pi+, pi-, pi0
+ReactionFilter:FS4  EXC_100_112			# pi+, pi-, 2pi0
+ReactionFilter:FS5  EXC_100_220			# 2pi+, 2pi-
+ReactionFilter:FS6  EXC_100_221			# 2pi+, 2pi-, pi0
+ReactionFilter:FS7  EXC_100_222			# 2pi+, 2pi-, 2pi0
+ReactionFilter:FS8  EXC_100_330			# 3pi+, 3pi-
+ReactionFilter:FS9  EXC_100_2000		# 2Ks
+ReactionFilter:FS10  EXC_100_2001		# 2Ks, pi0
+ReactionFilter:FS11  EXC_100_2002		# 2Ks, 2pi0
+ReactionFilter:FS12  EXC_100_2110		# 2Ks, pi+, pi-
+ReactionFilter:FS13  EXC_100_11100		# K-, Ks, pi+
+ReactionFilter:FS14  EXC_100_11101		# K-, Ks, pi+, pi0
+ReactionFilter:FS15  EXC_100_11102		# K-, Ks, pi+, 2pi0
+ReactionFilter:FS16  EXC_100_11210		# K-, Ks, 2pi+, pi-
+ReactionFilter:FS17  EXC_100_101010		# K+, Ks, pi-
+ReactionFilter:FS18  EXC_100_101011		# K+, Ks, pi-, pi0
+ReactionFilter:FS19  EXC_100_101012		# K+, Ks, pi-, 2pi0
+ReactionFilter:FS20  EXC_100_101120		# K+, Ks, pi+, 2pi-
+ReactionFilter:FS21  EXC_100_110000		# K+, K-
+ReactionFilter:FS22  EXC_100_110001		# K+, K-, pi0
+ReactionFilter:FS23  EXC_100_110002		# K+, K-, 2pi0
+ReactionFilter:FS24  EXC_100_110110		# K+, K-, pi+, pi-
+ReactionFilter:FS25  EXC_100_110111		# K+, K-, pi+, pi-, pi0
+ReactionFilter:FS26  EXC_100_110112		# K+, K-, pi+, pi-, 2pi0
+ReactionFilter:FS27  EXC_100_110220		# K+, K-, 2pi+, 2pi-
 
 # Lambda
-ReactionFilter:FS28  EXC_100000000_210000   #Lambda, 2K+, K-
-ReactionFilter:FS29  EXC_100000000_1101   #Lambda, K0, pi+, pi0
-ReactionFilter:FS30  EXC_100000000_1100   #Lambda, K0, pi+
-ReactionFilter:FS31  EXC_100000000_100110   #Lambda, K+, pi+, pi-
-ReactionFilter:FS32  EXC_100000000_100000   #Lambda, K+
-ReactionFilter:FS33  EXC_100000000_100001   #Lambda, K+, pi0
+ReactionFilter:FS28  EXC_100000000_210000	# Lambda, 2K+, K-
+ReactionFilter:FS29  EXC_100000000_1101		# Lambda, K0, pi+, pi0
+ReactionFilter:FS30  EXC_100000000_1100		# Lambda, K0, pi+
+ReactionFilter:FS31  EXC_100000000_100110	# Lambda, K+, pi+, pi-
+ReactionFilter:FS32  EXC_100000000_100000	# Lambda, K+
+ReactionFilter:FS33  EXC_100000000_100001	# Lambda, K+, pi0
 
 # Photons
-#ReactionFilter:FS34  EXC_100_3   #3pi0
-#ReactionFilter:FS35  EXC_100_4   #4pi0
-ReactionFilter:FS34  EXC_101_1   #eta, pi0
-ReactionFilter:FS35  EXC_101_2   #eta, 2pi0
-ReactionFilter:FS36  EXC_102_0   #2eta
-ReactionFilter:FS37  EXC_100_1000002   #g, #2pi0
+#ReactionFilter:FS34  EXC_100_3			# 3pi0
+#ReactionFilter:FS35  EXC_100_4			# 4pi0
+ReactionFilter:FS34  EXC_101_1			# eta, pi0
+ReactionFilter:FS35  EXC_101_2			# eta, 2pi0
+ReactionFilter:FS36  EXC_102_0			# 2eta
+#ReactionFilter:FS37  EXC_100_1000002		# g, 2pi0
 
 # 2pi + photons
-ReactionFilter:FS38  EXC_100_1000110   #g, pi+, pi-
-ReactionFilter:FS39  EXC_101_110       #eta, pi+, pi-
-ReactionFilter:FS40  EXC_100_1000111   #g, pi+, pi-, pi0
-ReactionFilter:FS41  EXC_101_111       #eta, pi+, pi-, pi0
-ReactionFilter:FS42  EXC_100_1000112   #g, pi+, pi-, 2pi0
-#ReactionFilter:FS45  EXC_100_113       #pi+, pi-, 3pi0
+#ReactionFilter:FS38  EXC_100_1000110		# g, pi+, pi-
+ReactionFilter:FS37  EXC_101_110		# eta, pi+, pi-
+#ReactionFilter:FS40  EXC_100_1000111		# g, pi+, pi-, pi0
+ReactionFilter:FS38  EXC_101_111		# eta, pi+, pi-, pi0
+#ReactionFilter:FS42  EXC_100_1000112		# g, pi+, pi-, 2pi0
+#ReactionFilter:FS45  EXC_100_113		# pi+, pi-, 3pi0
 
 # 4pi + photons
-ReactionFilter:FS43  EXC_100_1000220   #g, 2pi+, 2pi-
-ReactionFilter:FS44  EXC_101_220       #eta, 2pi+, 2pi-
-ReactionFilter:FS45  EXC_100_1000221   #g, 2pi+, 2pi-, pi0
-ReactionFilter:FS46  EXC_101_221       #eta, 2pi+, 2pi-, pi0
-ReactionFilter:FS47  EXC_100_1000222   #g, 2pi+, 2pi-, 2pi0
-#ReactionFilter:FS51  EXC_100_223       #2pi+, 2pi-, 3pi0
+#ReactionFilter:FS41  EXC_100_1000220		# g, 2pi+, 2pi-
+ReactionFilter:FS39  EXC_101_220		# eta, 2pi+, 2pi-
+#ReactionFilter:FS43  EXC_100_1000221		# g, 2pi+, 2pi-, pi0
+ReactionFilter:FS40  EXC_101_221		# eta, 2pi+, 2pi-, pi0
+#ReactionFilter:FS47  EXC_100_1000222		# g, 2pi+, 2pi-, 2pi0
+#ReactionFilter:FS51  EXC_100_223		# 2pi+, 2pi-, 3pi0
