--- a/launch/jobs_test.config
+++ b/launch/jobs_test.config
@@ -7,14 +7,14 @@
 
 # SCICOMP JOB ACCOUNTING
 PROJECT                       gluex                 # http://scicomp.jlab.org/scicomp/#/projects
-TRACK                         reconstruction        # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            centos65
+TRACK                         debug #reconstruction        # https://scicomp.jlab.org/docs/batch_job_tracks
+OS                            centos7
 
 # JOB RESOURCES
-NCORES                        14
+NCORES                        12
 DISK                          30GB
 RAM                           12GB
-TIMELIMIT                     12hrs
+TIMELIMIT                     2hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
