--- a/launch/jana_offmon.config
+++ b/launch/jana_offmon.config
@@ -1,9 +1,10 @@
-PLUGINS janadot,occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,p2pi_rho,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LED,pedestal_online,L1_online,FCAL_invmass,TrackingPulls
+PLUGINS janadot,occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LED,pedestal_online,L1_online,FCAL_invmass,TrackingPulls
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS 24
 
-REST:DATAVERSIONSTRING offmon_RunPeriod-2017-01_ver06
-JANA_CALIB_CONTEXT variation=calib calibtime=2017-02-21-11-19-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+REST:DATAVERSIONSTRING offmon_RunPeriod-2017-01_ver10
+JANA_CALIB_CONTEXT calibtime=2017-03-24-13-28-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
+TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
