--- a/launch/jobs_analysis.config
+++ b/launch/jobs_analysis.config
@@ -8,19 +8,19 @@
 # SCICOMP JOB ACCOUNTING
 PROJECT                       gluex                 # http://scicomp.jlab.org/scicomp/#/projects
 TRACK                         analysis              # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            centos65
+OS                            centos7
 
 # JOB RESOURCES
-NCORES                        48
-DISK                          10gb
-RAM                           12gb
-TIMELIMIT                     10hrs
+NCORES                        6
+DISK                          10GB
+RAM                           20GB
+TIMELIMIT                     12hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
 RUNPERIOD                     2016-02
 VERSION                       05
-BATCH                         01
+BATCH                         02
 WORKFLOW                      analysis_[RUNPERIOD]_ver[VERSION]_batch[BATCH]
 
 # JOB, SCRIPT CONTROL
@@ -28,13 +28,12 @@ ENVFILE                       /home/gxproj5/env_monitoring_launch.sh
 SCRIPTFILE                    /home/gxproj5/monitoring/launch/script.sh
 RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
 JANA_CONFIG                   /home/gxproj5/monitoring/launch/jana_analysis.config
-CACHE_PIN_DAYS                30                                            # max is 60, 0 or comment-out for none
+CACHE_PIN_DAYS                60                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/recon/ver03/REST/
+INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/recon/ver03/REST/
 
 # FOR FULL RECON LAUNCHES
-#OUTDIR_LARGE      /work/halld2/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]
 OUTDIR_LARGE      /cache/halld/RunPeriod-[RUNPERIOD]/analysis/ver[VERSION]                  # REST, skims, hists, trees
 OUTDIR_SMALL      /work/halld2/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]                  # log files, IDXA
 
