--- a/launch/jobs_offmon.config
+++ b/launch/jobs_offmon.config
@@ -8,18 +8,18 @@
 # SCICOMP JOB ACCOUNTING
 PROJECT                       gluex                 # http://scicomp.jlab.org/scicomp/#/projects
 TRACK                         reconstruction        # https://scicomp.jlab.org/docs/batch_job_tracks
-OS                            centos65
+OS                            centos7
 
 # JOB RESOURCES
 NCORES                        24
 DISK                          30GB
-RAM                           24GB
-TIMELIMIT                     8hrs
+RAM                           20GB
+TIMELIMIT                     4hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
-RUNPERIOD                     2016-10
-VERSION                       02
+RUNPERIOD                     2017-01
+VERSION                       10
 BATCH                         01
 WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION]_batch[BATCH]
 
@@ -28,12 +28,13 @@ ENVFILE                       /home/gxproj5/env_monitoring_launch.sh
 SCRIPTFILE                    /home/gxproj5/monitoring/launch/script.sh
 RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
 JANA_CONFIG                   /home/gxproj5/monitoring/launch/jana_offmon.config
-CACHE_PIN_DAYS                60                                            # max is 60, 0 or comment-out for none
+CACHE_PIN_DAYS                14                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
 INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/rawdata/
 
 # FOR SMALL, MONITORING LAUNCHES
 OUTDIR_LARGE      /cache/halld/offline_monitoring/RunPeriod-[RUNPERIOD]/ver[VERSION]     # REST, skims, hists, trees
-OUTDIR_SMALL      /work/halld2/data_monitoring/RunPeriod-[RUNPERIOD]/mon_ver[VERSION]        # log files, IDXA
+OUTDIR_SMALL      /work/halld2/data_monitoring/RunPeriod-[RUNPERIOD]/mon_ver[VERSION]        # log files
+#OUTDIR_IDXA      /work/halld/data_monitoring/RunPeriod-[RUNPERIOD]/mon_ver[VERSION]        # IDXA
 
