added a few calibration plugins for the monitoring launches 2017-01
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@22211 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jobs_offmon.config
+++ b/launch/jobs_offmon.config
@@ -19,9 +19,9 @@ TIMELIMIT                     4hrs
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
 RUNPERIOD                     2017-01
-VERSION                       10
+VERSION                       13
 BATCH                         01
-WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION]_batch[BATCH]
+WORKFLOW                      offmon_[RUNPERIOD]_ver[VERSION]
 
 # JOB, SCRIPT CONTROL
 ENVFILE                       /home/gxproj5/env_monitoring_launch.sh
