--- a/launch/jobs_recon.config
+++ b/launch/jobs_recon.config
@@ -1,4 +1,4 @@
-# Key/value pairs are separated by white space
+0;136;0c# Key/value pairs are separated by white space
 # Lines starting with # and empty lines are ignored
 # Only the first two values are evaluated, so for lines like:
 #     KEYVALUE VALUE1 VALUE2
@@ -11,23 +11,23 @@ TRACK                         reconstruction        # https://scicomp.jlab.org/d
 OS                            centos7
 
 # JOB RESOURCES
-NCORES                        12
+NCORES                        24
 DISK                          30GB
-RAM                           12GB
+RAM                           20GB
 TIMELIMIT                     12hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
 RUNPERIOD                     2016-02
-VERSION                       03
-BATCH                         03
+VERSION                       04
+BATCH                         01
 WORKFLOW                      recon_[RUNPERIOD]_ver[VERSION]_batch[BATCH]
 
 # JOB, SCRIPT CONTROL
-ENVFILE                       /home/gxproj5/env_monitoring_launch.sh
-SCRIPTFILE                    /home/gxproj5/monitoring/launch/script.sh
+ENVFILE                       /home/gxproj1/env_monitoring_launch.sh
+SCRIPTFILE                    /home/gxproj1/monitoring/launch/script.sh
 RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
-JANA_CONFIG                   /home/gxproj5/monitoring/launch/jana_recon.config
+JANA_CONFIG                   /home/gxproj1/monitoring/launch/jana_recon.config
 CACHE_PIN_DAYS                60                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
