a few additional plugins for offline monitoring runs
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@22346 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jana_offmon.config
+++ b/launch/jana_offmon.config
@@ -1,10 +1,12 @@
-PLUGINS janadot,occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,lowlevel_online,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,BCAL_Hadronic_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LED,BCAL_TDC_Timing,pedestal_online,L1_online,FCAL_invmass,TrackingPulls
+PLUGINS janadot,occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,lowlevel_online,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,PS_flux,TPOL_online,TOF_TDC_shift,BCAL_Eff,BCAL_Hadronic_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_TDC_Timing,L1_online,FCAL_invmass,TrackingPulls,p4pi_hists,p2k_hists,coherent_peak_skim,CDC_TimeToDistance,omega_skim
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS 24
 
-REST:DATAVERSIONSTRING offmon_RunPeriod-2017-01_ver14
-JANA_CALIB_CONTEXT calibtime=2017-04-07-11-31-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+REST:DATAVERSIONSTRING offmon_RunPeriod-2017-01_ver17
+JANA_CALIB_CONTEXT calibtime=2017-05-25-19-00-00   #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
 
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
+#Fail job if input file is truncated (default 0)
+EVIO:TREAT_TRUNCATED_AS_ERROR 1
