config files after merge of analysis overhaul
git-svn-id: https://halldsvn.jlab.org/repos/trunk/scripts/monitoring@22643 e333a0bb-b310-0410-bd06-bbc7ae8e47d2

--- a/launch/jobs_analysis.config
+++ b/launch/jobs_analysis.config
@@ -11,29 +11,30 @@ TRACK                         analysis              # https://scicomp.jlab.org/d
 OS                            centos7
 
 # JOB RESOURCES
-NCORES                        6
+NCORES                        12
 DISK                          10GB
-RAM                           20GB
-TIMELIMIT                     12hrs
+RAM                           10GB
+TIMELIMIT                     4hrs
 
 # WORKFLOW DEFINITION
 # RUNPERIOD, VERSION, & BATCH: Not needed by launch.py: Only used to replace variables in this config
-RUNPERIOD                     2016-02
+RUNPERIOD                     2017-01
 VERSION                       05
-BATCH                         02
-WORKFLOW                      analysis_[RUNPERIOD]_ver[VERSION]_batch[BATCH]
+BATCH                         01
+WORKFLOW                      analysis_[RUNPERIOD]_ver[VERSION] #_batch[BATCH]
 
 # JOB, SCRIPT CONTROL
-ENVFILE                       /home/gxproj5/env_monitoring_launch.sh
-SCRIPTFILE                    /home/gxproj5/monitoring/launch/script.sh
+ENVFILE                       /home/gxproj1/analysis_overhaul.sh
+SCRIPTFILE                    /home/gxproj1/monitoring/launch/script.sh
 RCDB_QUERY                    "@is_production and @status_approved"         # comment-out for all runs
-JANA_CONFIG                   /home/gxproj5/monitoring/launch/jana_analysis.config
-CACHE_PIN_DAYS                60                                            # max is 60, 0 or comment-out for none
+JANA_CONFIG                   /home/gxproj1/monitoring/launch/jana_analysis.config
+CACHE_PIN_DAYS                0                                            # max is 60, 0 or comment-out for none
 
 # FILE INPUT, OUTPUT BASE DIRECTORIES
-INDATA_TOPDIR     /cache/halld/RunPeriod-[RUNPERIOD]/recon/ver03/REST/
+INDATA_TOPDIR     /mss/halld/RunPeriod-[RUNPERIOD]/recon/ver01/REST/
 
 # FOR FULL RECON LAUNCHES
-OUTDIR_LARGE      /cache/halld/RunPeriod-[RUNPERIOD]/analysis/ver[VERSION]                  # REST, skims, hists, trees
+#OUTDIR_LARGE      /cache/halld/RunPeriod-[RUNPERIOD]/analysis/ver[VERSION]                  # REST, skims, hists, trees
+OUTDIR_LARGE      /work/halld/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]                  # REST, skims, hists, trees
 OUTDIR_SMALL      /work/halld2/analysis/RunPeriod-[RUNPERIOD]/ver[VERSION]                  # log files, IDXA
 
