--- a/launch/jana_analysis.config
+++ b/launch/jana_analysis.config
@@ -1,74 +1,87 @@
-PLUGINS monitoring_hists,ReactionFilter,2kpi0xi,antineutron,Bb2pi,Bpi0g,BTbcal_eta,cascade,cascade0,etaeta_nas,eta_etapr_eeg,etaetaprm_nas,EtaPrm_MKamel,incl_jpsi_lp,jpsi_lp,jpsi_robison,k0pi0sigmaplus,k0pisigma0,k0sigma,k2pisigma0,kpi0sigma0,kpisigmaplus,kpk0pixi,ksigma0,LambdaC,n3pi_hists,neutron,Nfinal,npiPlus_singlePi,p2gamma_hists,p4gamma,PhiEta,phiomega,phi_salgado,pomega2pi,pomegapi,ppbar_phelps,sdobbs_ccbar,sdobbs_pi0_dalitz,Xomega
+PLUGINS monitoring_hists,ReactionFilter
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
-NTHREADS 6
+NTHREADS 12
+
+#MONITOR:MEMORY_EVENTS 1100000
 
 #Limit number of neurals
-COMBO:MAX_NEUTRALS 14
+COMBO:MAX_NEUTRALS 15
 
-REST:DATAVERSIONSTRING recon_RunPeriod-2016-02_ver03
-JANA_CALIB_CONTEXT variation=default calibtime=2016-11-28-18-47-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+REST:DATAVERSIONSTRING recon_RunPeriod-2017-01_ver01
+ANALYSIS:DATAVERSIONSTRING analysis_RunPeriod-2017-01_ver05
 
-TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
+#JANA_CALIB_CONTEXT variation=default calibtime=2017-09-13-16-27-00     #calibtime=YYYY-MM-DD-hh-mm-ss (hr is 24-hr format)
+
 
 #EVENTS_TO_KEEP 50000
 
-ReactionFilter:FS1  EXC_100_2			# 2pi0
-ReactionFilter:FS2  EXC_100_110			# pi+, pi-
-ReactionFilter:FS3  EXC_100_111			# pi+, pi-, pi0
-ReactionFilter:FS4  EXC_100_112			# pi+, pi-, 2pi0
-ReactionFilter:FS5  EXC_100_220			# 2pi+, 2pi-
-ReactionFilter:FS6  EXC_100_221			# 2pi+, 2pi-, pi0
-ReactionFilter:FS7  EXC_100_222			# 2pi+, 2pi-, 2pi0
-ReactionFilter:FS8  EXC_100_330			# 3pi+, 3pi-
-ReactionFilter:FS9  EXC_100_2000		# 2Ks
-ReactionFilter:FS10  EXC_100_2001		# 2Ks, pi0
-ReactionFilter:FS11  EXC_100_2002		# 2Ks, 2pi0
-ReactionFilter:FS12  EXC_100_2110		# 2Ks, pi+, pi-
-ReactionFilter:FS13  EXC_100_11100		# K-, Ks, pi+
-ReactionFilter:FS14  EXC_100_11101		# K-, Ks, pi+, pi0
-ReactionFilter:FS15  EXC_100_11102		# K-, Ks, pi+, 2pi0
-ReactionFilter:FS16  EXC_100_11210		# K-, Ks, 2pi+, pi-
-ReactionFilter:FS17  EXC_100_101010		# K+, Ks, pi-
-ReactionFilter:FS18  EXC_100_101011		# K+, Ks, pi-, pi0
-ReactionFilter:FS19  EXC_100_101012		# K+, Ks, pi-, 2pi0
-ReactionFilter:FS20  EXC_100_101120		# K+, Ks, pi+, 2pi-
-ReactionFilter:FS21  EXC_100_110000		# K+, K-
-ReactionFilter:FS22  EXC_100_110001		# K+, K-, pi0
-ReactionFilter:FS23  EXC_100_110002		# K+, K-, 2pi0
-ReactionFilter:FS24  EXC_100_110110		# K+, K-, pi+, pi-
-ReactionFilter:FS25  EXC_100_110111		# K+, K-, pi+, pi-, pi0
-ReactionFilter:FS26  EXC_100_110112		# K+, K-, pi+, pi-, 2pi0
-ReactionFilter:FS27  EXC_100_110220		# K+, K-, 2pi+, 2pi-
+# GEANT PIDS:
+# X/g          =  0, 1
+# e+/-         =  2, 3
+# pi0/+/-      =  7, 8, 9
+# K+/-/S/L     =  11, 12, 16, 10
+# eta/eta'     =  17, 35
+# omega/phi    =  33, 34
 
-# Lambda
-ReactionFilter:FS28  EXC_100000000_210000	# Lambda, 2K+, K-
-ReactionFilter:FS29  EXC_100000000_1101		# Lambda, K0, pi+, pi0
-ReactionFilter:FS30  EXC_100000000_1100		# Lambda, K0, pi+
-ReactionFilter:FS31  EXC_100000000_100110	# Lambda, K+, pi+, pi-
-ReactionFilter:FS32  EXC_100000000_100000	# Lambda, K+
-ReactionFilter:FS33  EXC_100000000_100001	# Lambda, K+, pi0
+# Etac         =  84
+# Jpsi/psi2s   =  83, 88
+# D0/D0bar/D+  =  89, 94, 90
+# Chic0/1/2    =  85, 86, 87
+# D*0/+        =  91, 92
 
-# Photons
-#ReactionFilter:FS34  EXC_100_3			# 3pi0
-#ReactionFilter:FS35  EXC_100_4			# 4pi0
-ReactionFilter:FS34  EXC_101_1			# eta, pi0
-ReactionFilter:FS35  EXC_101_2			# eta, 2pi0
-ReactionFilter:FS36  EXC_102_0			# 2eta
-#ReactionFilter:FS37  EXC_100_1000002		# g, 2pi0
+# p/pbar/n     =  14, 15, 13
+# Lamb/lbar    =  18, 26
+# Sig+/0/-     =  19, 20, 21
+# Xi0/-        =  22, 23
+# Omega-       =  24
+# Lambdac      =  93
 
-# 2pi + photons
-#ReactionFilter:FS38  EXC_100_1000110		# g, pi+, pi-
-ReactionFilter:FS37  EXC_101_110		# eta, pi+, pi-
-#ReactionFilter:FS40  EXC_100_1000111		# g, pi+, pi-, pi0
-ReactionFilter:FS38  EXC_101_111		# eta, pi+, pi-, pi0
-#ReactionFilter:FS42  EXC_100_1000112		# g, pi+, pi-, 2pi0
-#ReactionFilter:FS45  EXC_100_113		# pi+, pi-, 3pi0
+#F#: Kinfit enum value (0 is no fit, 1 is p4-only, 2 is vertex only, 4 is vertex-p4)
 
-# 4pi + photons
-#ReactionFilter:FS41  EXC_100_1000220		# g, 2pi+, 2pi-
-ReactionFilter:FS39  EXC_101_220		# eta, 2pi+, 2pi-
-#ReactionFilter:FS43  EXC_100_1000221		# g, 2pi+, 2pi-, pi0
-ReactionFilter:FS40  EXC_101_221		# eta, 2pi+, 2pi-, pi0
-#ReactionFilter:FS47  EXC_100_1000222		# g, 2pi+, 2pi-, 2pi0
-#ReactionFilter:FS51  EXC_100_223		# 2pi+, 2pi-, 3pi0
+#B#: # of ± Beam Bunches (e.g. 0 is center peak only, 2 is center ± 2)
+
+#T#: # of extra tracks
+
+#M#: PID # of particle to not constrain kinfit mass
+
+#Convention for final-state order: numerical, but baryons last
+
+Reaction1  1_14__1_1_14		        # 2g p
+Reaction1:Flags B4
+Reaction2  1_14__8_9_14		        # pi+ pi- p
+Reaction2:Flags B4
+Reaction3  1_14__7_8_9_14		# pi0 pi+ pi- p
+Reaction3:Flags B4
+Reaction4  1_14__7_7_7_14		# 3pi0 p
+Reaction4:Flags B4
+
+Reaction5  1_14__11_12_14		# K+ K- p
+Reaction5:Flags B4
+
+#Mahmoud
+Reaction6  1_14__1_1_8_8_9_9_14         # 2g 2pi+ 2pi- p
+Reaction7  1_14__1_1_8_8_9_13           # 2g 2pi+ pi- n
+Reaction8  1_14__8_9_17_14		# pi+ pi- eta p
+Reaction8:Flags B3
+Reaction9  1_14__1_8_9_14		# g pi+ pi- p
+Reaction9:Flags B3
+
+#Bradford
+Reaction10 1_14__1_1_11_12_14		# 2g K+ K- p
+
+#Ashley
+Reaction11          1_14__11_11_23
+Reaction11:Flags    M18_M23
+Reaction12          1_14__11_11_12_18
+Reaction12:Flags    M18
+Reaction13          1_14__7_9_11_11_18
+Reaction14          1_14__11_16_22
+Reaction14:Flags    M22
+Reaction15          1_14__8_11_16_23
+Reaction15:Flags    M23
+Reaction16          1_14__11_16_16_18
+
+#Peter
+Reaction17          1_14__11_11_16_24
+Reaction17:Decay1   18__9_m14
