--- a/launch/jana_recon.config
+++ b/launch/jana_recon.config
@@ -9,5 +9,5 @@ JANA_CALIB_CONTEXT variation=default calibtime=2017-07-04-15-28-00     #calibtim
 TRKFIT:HYPOTHESES 2,3,8,9,11,12,14,15    #GEANT PIDs for tracking: Add e+/- & pbar
 
 #Fail job if input file is truncated (default 0)
-EVIO:TREAT_TRUNCATED_AS_ERROR 1
+#EVIO:TREAT_TRUNCATED_AS_ERROR 1
 
