--- a/incoming/jana_incoming.config
+++ b/incoming/jana_incoming.config
@@ -1,4 +1,5 @@
-PLUGINS janadot,occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_online,TAGM_clusters,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,BCAL_attenlength_gainratio,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LED,pedestal_online,L1_online,FCAL_invmass
+PLUGINS occupancy_online,highlevel_online,danarest,monitoring_hists,TAGH_online,TAGM_clusters,BCAL_online,CDC_online,CDC_Efficiency,FCAL_online,FDC_online,FDC_Efficiency,ST_online_lowlevel,ST_online_tracking,TOF_online,PS_online,PSC_online,PSPair_online,TPOL_online,TOF_TDC_shift,BCAL_Eff,p2pi_hists,p3pi_hists,ppi0gamma_hists,HLDetectorTiming,BCAL_inv_mass,TRIG_online,CDC_drift,RF_online,ST_online_efficiency,ST_online_Tresolution,CDC_expert_2,BCAL_LED,L1_online,FCAL_invmass,pedestal_online,TAGM_online,lowlevel_online
+#,BCAL_attenlength_gainratio, janadot,
 
 #Ncores if you want to use all of the hyperthreads available (only use if you have the whole node!)
 NTHREADS 24
@@ -8,4 +9,6 @@ NTHREADS 24
 REST:DATAVERSIONSTRING offmon_RunPeriod-2018-01_ver01
 JANA_CALIB_CONTEXT variation=default
 
+#Fail job if input file is truncated (default 0)
+#EVIO:TREAT_TRUNCATED_AS_ERROR 1
 
