Create local version file so that new gluex_sim repo can be build against its full (old) sim-recon parent.

--- a/split_sim-recon/Makefile
+++ b/split_sim-recon/Makefile
@@ -12,6 +12,14 @@ all: .scons_done
 	git clone file://$(PWD)/sim-recon $(SIM_REPO_DIR)
 	date > $@
 
+version_split.xml:
+	$(BUILD_SCRIPTS)/customize_version.pl -i /group/halld/www/halldweb/html/dist/version_jlab.xml -o version_split.xml -s $(PWD)/sim-recon -4 $(PWD)/hdgeant4 -a $(PWD)/gluex_root_analysis
+
+.scons_sim-recon_done: version_split.xml .sim-recon_clone_done
+	. $(BUILD_SCRIPTS)/gluex_env_jlab.sh version_split.xml ; \
+	cd sim-recon/src ; \
+	scons install $(SIM_RECON_SCONS_OPTIONS)
+
 .filter_done: .sim_clone_done
 	pushd $(SIM_REPO_DIR) ; git filter-branch --index-filter 'git rm --cached -qr --ignore-unmatch -- . && git reset -q $(GIT_COMMIT) -- src/programs/Simulation src/plugins/Simulation src/libraries/AMPTOOLS_AMPS src/libraries/AMPTOOLS_DATAIO src/libraries/AMPTOOLS_MCGEN' --prune-empty -- --all
 	date > $@
@@ -24,8 +32,10 @@ all: .scons_done
 	cp $(EXAMPLE_SPLIT_DIR)/src/plugins/SConscript $(SIM_REPO_DIR)/src/plugins
 	date > $@
 
-.scons_done: .copy_done
-	pushd $(SIM_REPO_DIR)/src ; scons install
+.scons_done: .scons_sim-recon_done .copy_done
+	. $(BUILD_SCRIPTS)/gluex_env_jlab.sh version_split.xml ; \
+	cd $(SIM_REPO_DIR)/src ; \
+	scons install
 
 clean:
 	rm -rfv gluex_sim .*_done
